--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-scrollama": "^2.3.2",
     "react-tsparticles": "^2.0.6",
     "swiper": "^8.1.6",
     "use-local-storage": "^2.3.6",
